err/cfnjsontoyaml.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/cfnjsontoyaml'...
Compiling './lib/python3.5/site-packages/cfnjsontoyaml/__main__.py'...
***   File "./lib/python3.5/site-packages/cfnjsontoyaml/__main__.py", line 31
    print print_to_string(ConvertToMediary(document).convert(order_template=True))
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cfnjsontoyaml/mixins'...
Compiling './lib/python3.5/site-packages/cfnjsontoyaml/nodeparser.py'...
***   File "./lib/python3.5/site-packages/cfnjsontoyaml/nodeparser.py", line 85
    print 'not_function'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cfnjsontoyaml/parser'...
Listing './lib/python3.5/site-packages/cfnjsontoyaml/yamlobject'...
Listing './lib/python3.5/site-packages/cfnjsontoyaml-1.0.5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
